// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Action Creator: Support createTicket should create a ticket 1`] = `
Object {
  "meta": Object {
    "data": Object {
      "issue_type": "billing",
      "message": "mess",
      "subject": "sub",
    },
    "method": "POST",
    "url": "/v1/integrations/support/ticket",
  },
  "type": "CREATE_TICKET",
}
`;

exports[`Action Creator: Support openSupportTicketForm should open support panel 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "payload": Object {
          "view": "ticket",
        },
        "type": "OPEN_SUPPORT_PANEL",
      },
    ],
  ],
  "results": undefined,
}
`;

exports[`Action Creator: Support should close support panel 1`] = `
Object {
  "type": "CLOSE_SUPPORT_PANEL",
}
`;

exports[`Action Creator: Support should open support panel 1`] = `
Object {
  "payload": undefined,
  "type": "OPEN_SUPPORT_PANEL",
}
`;

exports[`Action Creator: Support should open support panel with specific view 1`] = `
Object {
  "payload": Object {
    "view": "ticket",
  },
  "type": "OPEN_SUPPORT_PANEL",
}
`;
